unpackaged/main/default/objects/Lead/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Organization ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>