unpackaged/main/default/objects/Lead/fields/Accounts_ID__c.field-meta.xml
<CustomField>
    <fullName>Accounts_ID__c</fullName>
    <externalId>true</externalId>
    <label>OS Accounts ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>