unpackaged/main/default/objects/Lead/fields/Accounts_UUID__c.field-meta.xml
<CustomField>
    <fullName>Accounts_UUID__c</fullName>
    <description>Users OpenStax Accounts UUID. The unique identifier across all OpenStax systems after the user has created an account with us.</description>
    <externalId>true</externalId>
    <label>Accounts_UUID__c</label>
    <length>36</length>
    <type>Text</type>
</CustomField>