unpackaged/main/default/objects/Lead/fields/Adoption_Status__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Status__c</fullName>
    <label>Adoption Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed Adoption Won</fullName>
            </value>
            <value>
                <fullName>Confirmed Will Recommend</fullName>
            </value>
            <value>
                <fullName>High Interest in Adopting</fullName>
            </value>
            <value>
                <fullName>Not using</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>