unpackaged/main/default/objects/Lead/fields/AdoptionsJSON__c.field-meta.xml
<CustomField>
    <fullName>AdoptionsJSON__c</fullName>
    <description>This is only populated when someone says they have adopted something</description>
    <label>AdoptionsJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>