unpackaged/main/default/objects/Lead/fields/All_Emails__c.field-meta.xml
<CustomField>
    <fullName>All_Emails__c</fullName>
    <externalId>true</externalId>
    <label>All Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>