unpackaged/main/default/objects/Lead/fields/Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Source__c</fullName>
    <label>Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tutor Signup</fullName>
            </value>
            <value>
                <fullName>OS Web</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Formsite</fullName>
            </value>
            <value>
                <fullName>Zapier</fullName>
            </value>
            <value>
                <fullName>OS Web/Accounts</fullName>
                <isActive>false</isActive>
                <label>OS Web/Accounts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>