unpackaged/main/default/objects/Lead/fields/Books_Selected__c.field-meta.xml
<CustomField>
    <fullName>Books_Selected__c</fullName>
    <description>The books this lead has identified as adopting</description>
    <label>Selected Books</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Books</valueSetName>
    </valueSet>
</CustomField>