unpackaged/main/default/objects/Lead/fields/Class_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_End_Date__c</fullName>
    <label>Class End Date</label>
    <type>Date</type>
</CustomField>