unpackaged/main/default/objects/Lead/fields/Close_Return_URL__c.field-meta.xml
<CustomField>
    <fullName>Close_Return_URL__c</fullName>
    <formula>CASE(  LeadSource  , 
"OSC Faculty", "00Q?fcf=00B0B000004dWQx",
"Comp Request", "00Q?fcf=00BU0000004UF3S",
"Adoption Form", "00Q?fcf=00BU0000004Tqu2",
"Referral Form", "00Q?fcf=00BU00000048j7U",
"Renewal Form", "00Q?fcf=00BU00000048LbX",
"Concept Coach Signup", "00Q?fcf=00BU0000004KrvU",
"Interest Form", "00Q?fcf=00BU0000004UF46",
"00Q/o")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Return URL</label>
    <type>Text</type>
</CustomField>