unpackaged/main/default/objects/Lead/fields/Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Date__c</fullName>
    <label>Confirmed Date</label>
    <type>Date</type>
</CustomField>