unpackaged/main/default/objects/Lead/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <label>Contact ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>