unpackaged/main/default/objects/Lead/fields/Days_Pending__c.field-meta.xml
<CustomField>
    <fullName>Days_Pending__c</fullName>
    <description>Number of days since this lead was created</description>
    <formula>(TODAY() -   DATEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>