unpackaged/main/default/objects/Lead/fields/Department_Wide__c.field-meta.xml
<CustomField>
    <fullName>Department_Wide__c</fullName>
    <formula>IF(
 Dept_student_number__c &gt; 0 ,
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Wide</label>
    <type>Checkbox</type>
</CustomField>