unpackaged/main/default/objects/Lead/fields/Dept_student_number__c.field-meta.xml
<CustomField>
    <fullName>Dept_student_number__c</fullName>
    <label>Dept student number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>