unpackaged/main/default/objects/Lead/fields/DonationID__c.field-meta.xml
<CustomField>
    <fullName>DonationID__c</fullName>
    <label>DonationID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>