unpackaged/main/default/objects/Lead/fields/Email_Reference__c.field-meta.xml
<CustomField>
    <fullName>Email_Reference__c</fullName>
    <description>Reference for email testing in Engagement Studio</description>
    <formula>MOD(VALUE( Lead_Number__c) ,9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Reference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>