unpackaged/main/default/objects/Lead/fields/Entry_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Entry_Form_Status__c</fullName>
    <label>Entry Form Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>