unpackaged/main/default/objects/Lead/fields/Faculty_Book__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Book__c</fullName>
    <label>Faculty Book</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>