unpackaged/main/default/objects/Lead/fields/Faculty_Website__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Website__c</fullName>
    <label>Faculty Website</label>
    <type>Url</type>
</CustomField>