unpackaged/main/default/objects/Lead/fields/Feedback_Length__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Length__c</fullName>
    <label>Feedback Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>