unpackaged/main/default/objects/Lead/fields/Feedback_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Response_Status__c</fullName>
    <label>Feedback Response Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Feedback</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>No Action Necessary</fullName>
            </value>
            <value>
                <fullName>Action Taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>