unpackaged/main/default/objects/Lead/fields/First__c.field-meta.xml
<CustomField>
    <fullName>First__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not First</label>
    <type>Checkbox</type>
</CustomField>