unpackaged/main/default/objects/Lead/fields/Form_Partner__c.field-meta.xml
<CustomField>
    <fullName>Form_Partner__c</fullName>
    <label>Form Partner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blending Education</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Carnegie Learning</fullName>
            </value>
            <value>
                <fullName>Carolina Distance Learning</fullName>
            </value>
            <value>
                <fullName>Catalyst Education</fullName>
            </value>
            <value>
                <fullName>Cengage CNowV2</fullName>
            </value>
            <value>
                <fullName>Cengage OpenNow</fullName>
            </value>
            <value>
                <fullName>Classavo</fullName>
            </value>
            <value>
                <fullName>CogBooks</fullName>
            </value>
            <value>
                <fullName>Connect for Education</fullName>
            </value>
            <value>
                <fullName>Copia</fullName>
            </value>
            <value>
                <fullName>Edfinity</fullName>
            </value>
            <value>
                <fullName>eMath</fullName>
            </value>
            <value>
                <fullName>Expert TA</fullName>
            </value>
            <value>
                <fullName>Hawkes Learning</fullName>
            </value>
            <value>
                <fullName>iClicker</fullName>
            </value>
            <value>
                <fullName>Junction</fullName>
            </value>
            <value>
                <fullName>Knewton</fullName>
            </value>
            <value>
                <fullName>LabArchives</fullName>
            </value>
            <value>
                <fullName>Lrnr</fullName>
            </value>
            <value>
                <fullName>Lumen Learning - Candela</fullName>
            </value>
            <value>
                <fullName>Lumen Learning - OHM</fullName>
            </value>
            <value>
                <fullName>Lumen Learning - Waymaker</fullName>
            </value>
            <value>
                <fullName>Lyryx Learning</fullName>
            </value>
            <value>
                <fullName>Sapling Learning</fullName>
            </value>
            <value>
                <fullName>McGraw-Hill Education</fullName>
            </value>
            <value>
                <fullName>Mind Edge</fullName>
            </value>
            <value>
                <fullName>Odigia</fullName>
            </value>
            <value>
                <fullName>OpenStax Tutor Beta</fullName>
            </value>
            <value>
                <fullName>panOpen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>