unpackaged/main/default/objects/Lead/fields/From_Formsite__c.field-meta.xml
<CustomField>
    <fullName>From_Formsite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Formsite</label>
    <type>Checkbox</type>
</CustomField>