unpackaged/main/default/objects/Lead/fields/FromLeadMerge__c.field-meta.xml
<CustomField>
    <fullName>FromLeadMerge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FromLeadMerge</label>
    <type>Checkbox</type>
</CustomField>