unpackaged/main/default/objects/Lead/fields/FV_Final__c.field-meta.xml
<CustomField>
    <fullName>FV_Final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FV Final</label>
    <type>Checkbox</type>
</CustomField>