unpackaged/main/default/objects/Lead/fields/FV_Status__c.field-meta.xml
<CustomField>
    <fullName>FV_Status__c</fullName>
    <label>FV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>incomplete_signup</fullName>
                <label>Incomplete Signup</label>
            </value>
            <value>
                <fullName>rejected_by_sheer_id</fullName>
                <label>Rejected by SheerID</label>
            </value>
            <value>
                <fullName>pending_faculty</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>rejected_faculty</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>confirmed_faculty</fullName>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>no_faculty_info</fullName>
                <label>No Faculty Info</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>