unpackaged/main/default/objects/Lead/fields/Google_Analytics_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Campaign__c</fullName>
    <label>Google Analytics Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>