unpackaged/main/default/objects/Lead/fields/Grant_Tutor_Access__c.field-meta.xml
<CustomField>
    <fullName>Grant_Tutor_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Accounts application to determine if the user should have access to the Tutor application.</description>
    <label>Grant Tutor Access</label>
    <type>Checkbox</type>
</CustomField>