unpackaged/main/default/objects/Lead/fields/HeroPilot__c.field-meta.xml
<CustomField>
    <fullName>HeroPilot__c</fullName>
    <label>HeroPilot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>