unpackaged/main/default/objects/Lead/fields/How_did_you_Hear__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_Hear__c</fullName>
    <label>How did you Hear?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web Search</fullName>
            </value>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Partner Organization</fullName>
                <label>Partner organization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>