unpackaged/main/default/objects/Lead/fields/Ignore_Old_Flow__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Old_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Old Flow</label>
    <type>Checkbox</type>
</CustomField>