unpackaged/main/default/objects/Lead/fields/Instant_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Instant_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting to true will cause the lead to be converted immediately</description>
    <inlineHelpText>Check to instantly convert to contact</inlineHelpText>
    <label>Instant Conversion</label>
    <type>Checkbox</type>
</CustomField>