unpackaged/main/default/objects/Lead/fields/Institutional_Email__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Email__c</fullName>
    <label>Institutional Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>