unpackaged/main/default/objects/Lead/fields/Institutional_Relation_RR__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Relation_RR__c</fullName>
    <description>Institutional Relations Round Robin Assignment Number</description>
    <formula>MOD(Value(Lead_Number__c),1)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Institutional Relation RR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>