unpackaged/main/default/objects/Lead/fields/Interest_in_being_Featured__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_being_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest in being Featured</label>
    <type>Checkbox</type>
</CustomField>