unpackaged/main/default/objects/Lead/fields/Interest_in_Pilots__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_Pilots__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest in Pilots</label>
    <type>Checkbox</type>
</CustomField>