unpackaged/main/default/objects/Lead/fields/Internal_RR__c.field-meta.xml
<CustomField>
    <fullName>Internal_RR__c</fullName>
    <description>Internal Sales Round Robin Assignment Number</description>
    <formula>MOD(VALUE(Lead_Number__c),1)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal RR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>