unpackaged/main/default/objects/Lead/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>testing purposes</inlineHelpText>
    <label>IsNew</label>
    <type>Checkbox</type>
</CustomField>