unpackaged/main/default/objects/Lead/fields/KIP__c.field-meta.xml
<CustomField>
    <fullName>KIP__c</fullName>
    <formula>School__r.K_I_P__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KIP</label>
    <type>Checkbox</type>
</CustomField>