unpackaged/main/default/objects/Lead/fields/Last_Site_Action_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Site_Action_Completed__c</fullName>
    <label>Last Site Action Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>