unpackaged/main/default/objects/Lead/fields/Manual__c.field-meta.xml
<CustomField>
    <fullName>Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual</label>
    <type>Checkbox</type>
</CustomField>