unpackaged/main/default/objects/Lead/fields/Needs__c.field-meta.xml
<CustomField>
    <fullName>Needs__c</fullName>
    <description>Populated from Lead Autoflow</description>
    <label>Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faculty Verification</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Comp Request</fullName>
            </value>
            <value>
                <fullName>Concept Coach</fullName>
            </value>
            <value>
                <fullName>Tutor</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>