unpackaged/main/default/objects/Lead/fields/Needs_CS_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_CS_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs CS Review</label>
    <type>Checkbox</type>
</CustomField>