unpackaged/main/default/objects/Lead/fields/Needs_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Needs_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Deletion</label>
    <type>Checkbox</type>
</CustomField>