unpackaged/main/default/objects/Lead/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Newsletter_dep</label>
    <type>Checkbox</type>
</CustomField>