unpackaged/main/default/objects/Lead/fields/Notoriety__c.field-meta.xml
<CustomField>
    <fullName>Notoriety__c</fullName>
    <label>Notoriety</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Criticism</fullName>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>