unpackaged/main/default/objects/Lead/fields/Number_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students__c</fullName>
    <label>No of students - class</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>