unpackaged/main/default/objects/Lead/fields/OpenStax_Account__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The users OpenStax account stored as an custom SObj in Salesforce.</description>
    <inlineHelpText>The users OpenStax account stored as an custom SObj in Salesforce.</inlineHelpText>
    <label>OpenStax Account</label>
    <referenceTo>OpenStax_Account__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>