unpackaged/main/default/objects/Lead/fields/OpenStax_Account_Faculty_Status__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account_Faculty_Status__c</fullName>
    <description>Faculty Status as reported from OpenStax Accounts</description>
    <formula>TEXT(OpenStax_Account__r.Faculty_Status__c)</formula>
    <inlineHelpText>Faculty Status as reported from OpenStax Accounts. Note: This might take time to update after a change to faculty status in Salesforce.</inlineHelpText>
    <label>OpenStax Account Faculty Status</label>
    <type>Text</type>
</CustomField>