unpackaged/main/default/objects/Lead/fields/OpenStax_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account_ID__c</fullName>
    <description>OpenStax Account ID</description>
    <formula>OpenStax_Account__r.Account_ID_Display__c</formula>
    <inlineHelpText>OpenStax Account ID</inlineHelpText>
    <label>OpenStax Account ID</label>
    <type>Text</type>
</CustomField>