unpackaged/main/default/objects/Lead/fields/OpenStax_Account_Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account_Signup_Date__c</fullName>
    <description>Date signed up on OpenStax Accounts</description>
    <formula>OpenStax_Account__r.Signup_Date__c</formula>
    <inlineHelpText>Date signed up on OpenStax Accounts</inlineHelpText>
    <label>OpenStax Account Signup Date</label>
    <type>DateTime</type>
</CustomField>