unpackaged/main/default/objects/Lead/fields/OpenStax_Account_Signup_Role__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account_Signup_Role__c</fullName>
    <description>Signup role as reported by OpenStax Accounts</description>
    <formula>TEXT(OpenStax_Account__r.Account_Role__c)</formula>
    <inlineHelpText>Signup role as reported by OpenStax Accounts</inlineHelpText>
    <label>OpenStax Account Signup Role</label>
    <type>Text</type>
</CustomField>