unpackaged/main/default/objects/Lead/fields/OpenStax_Account_UUID__c.field-meta.xml
<CustomField>
    <fullName>OpenStax_Account_UUID__c</fullName>
    <description>OpenStax Account UUID</description>
    <formula>OpenStax_Account__r.Account_UUID__c</formula>
    <inlineHelpText>OpenStax Account UUID</inlineHelpText>
    <label>OpenStax Account UUID</label>
    <type>Text</type>
</CustomField>