unpackaged/main/default/objects/Lead/fields/Opp_Description__c.field-meta.xml
<CustomField>
    <fullName>Opp_Description__c</fullName>
    <label>Opp Description</label>
    <type>TextArea</type>
</CustomField>