unpackaged/main/default/objects/Lead/fields/other_role_name__c.field-meta.xml
<CustomField>
    <fullName>other_role_name__c</fullName>
    <label>Other Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>